maze.lessons.maze.island.IslandMaze.scala.error
Escaper:4: error: value nord is not a member of object plm.universe.Direction
    if (getDirection()==Direction.nord && estFaceMur==false){
                                  ^